# muda-win

./: Cargo.toml  README.md
src/: about_metadata.rs  accelerator.rs  error.rs  icon.rs  lib.rs  menu.rs
src/builders/: check.rs  icon.rs  mod.rs  normal.rs  submenu.rs
src/items/: check.rs  icon.rs  mod.rs  predefined.rs  submenu.rs
src/platform_impl/: accelerator.rs  dark_menu_bar.rs  icon.rs  mod.rs  util.rs
